# DL4MicEverywhere

./: .gitignore  CARE_2D_ZeroCostDL4Mic.ipynb  CARE_2D_requirements_simple.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Dockerfile_old  Linux_launch.sh  MacOS_launch.command  Makefile  README.md  Windows_launch.bat  album_catalog_index.json  construct.yaml  create_desktop.sh  docker-compose.gpu.yml  docker-compose.macos.yml  docker-compose.yml  environment.gpu.yml  environment.yml  gitignore  gui.tcl  launch.bat  launch.command  launch.sh  launcher.py  launcher.spec  main.py  notebook.ipynb  old_Dockerfile  parse_yaml.sh  populate.py  post_build_test.sh  pre_build_test.sh  pyproject.toml  test_conda.py  zenity.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  build.yml  (+35 more)
.tools/: check_zerocost_versions.py  create_desktop.sh  gui.tcl  hub_img_gui.tcl  list_of_notebooks.py  local_img_gui.tcl  main_gui.tcl  open_browser.sh  parse_yaml.sh  post_build_test.sh  pre_build_test.sh  pre_launch_test.sh  requirements.txt  requirements_installation.sh  test-notebooks.md  update_configuration.py  update_zerocost_version.py
dl4miceverywhere/: windows_launch.py
docs/: CLI_USER_GUIDE.md  DATA.md  DESIGN.md  DL4MicEverywhere_overtime.md  DOCKER_DESKTOP.md  FAQ.md  FORMAT.md  GUI_USER_GUIDE.md  INSTALLATION.md  MAINTENANCE.md  NOTEBOOKS.md  NOTEBOOK_TYPES.md  REMOTE_CONNECTION.md  REQUIREMENTS_INSTALLATION.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOWS_INSTALLATION.md
dood/: Dockerfile
scripts/: gui.tcl  post_build_test.sh
(+185 files in other folders)
